[0, 15, 25]: 2017-08-09
  - fix for problem with dumping (unloaded) floats (reported by eyenseo)

[0, 15, 24]: 2017-08-09
  - added ScalarFloat which supports roundtripping of 23.1, 23.100,
    42.00E+56, 0.0, -0.0 etc. while keeping the format. Underscores in mantissas
    are not preserved/supported (yet, is anybody using that?).
  - (finally) fixed longstanding issue 23 (reported by `Antony Sottile
    <https://bitbucket.org/asottile/>`_), now handling comment between block
    mapping key and value correctly
  - warn on YAML 1.1 float input that is incorrect (triggered by invalid YAML
    provided by Cecil Curry)
  - allow setting of boolean representation (`false`, `true`) by using:
    ``yaml.boolean_representation = [u'False', u'True']``

[0, 15, 23]: 2017-08-01
  - fix for round_tripping integers on 2.7.X > sys.maxint (reported by ccatterina)

[0, 15, 22]: 2017-07-28
  - fix for round_tripping singe excl. mark tags doubling (reported and fix by Jan Brezina)

[0, 15, 21]: 2017-07-25
  - fix for writing unicode in new API, https://stackoverflow.com/a/45281922/1307905

[0, 15, 20]: 2017-07-23
  - wheels for windows including C extensions

[0, 15, 19]: 2017-07-13
  - added object constructor for rt, decorator ``yaml_object`` to replace YAMLObject.
  - fix for problem using load_all with Path() instance
  - fix for load_all in combination with zero indent block style literal
    (``pure=True`` only!)

[0, 15, 18]: 2017-07-04
  - missing ``pure`` attribute on ``YAML`` useful for implementing `!include` tag
    constructor for `including YAML files in a YAML file
    <https://stackoverflow.com/a/44913652/1307905>`_
  - some documentation improvements
  - trigger of doc build on new revision

[0, 15, 17]: 2017-07-03
  - support for Unicode supplementary Plane **output** with allow_unicode
    (input was already supported, triggered by
    `this <https://stackoverflow.com/a/44875714/1307905>`_ Stack Overflow Q&A)

[0, 15, 16]: 2017-07-01